--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -247,6 +247,9 @@ max-width: 250px;
    @media (max-width:$md4+px)  {
       font-size: 100px;
    }
+   @media (max-width:280px) {
+      font-size: 80px;
+   } 
 }
 
 .h1.and {
@@ -269,6 +272,9 @@ max-width: 250px;
       top: 27%;
       left: 45%;
    }
+   @media (max-width:280px) {
+      font-size: 120px;
+   } 
 }
 
 .ilya {
@@ -283,6 +289,7 @@ max-width: 250px;
       top: 12%;
       right: 5%;
    }
+   
 }
 
 .daria {
@@ -453,7 +460,7 @@ text-transform: uppercase;
 }
 .time-block::before {
    content: '';
-   background: url('/img/sloy_15_167.png') no-repeat ;
+   background: url('../img/sloy_15_167.png') no-repeat ;
    width: 100%;
    height: 100%;
 
@@ -551,8 +558,10 @@ font-size: 30px;
    &__input-wrapper {
       text-align: left;
       margin: 0px 0px 30px 0px;
-
-      &_hidden {}
+     
+      &_hidden {
+         margin: 0px 0px 0px 0px;
+      }
    }
 
    &__input {
