--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,11 @@ main {
     font-size: 100px;
   }
 }
+@media (max-width: 280px) {
+  .h1 {
+    font-size: 80px;
+  }
+}
 
 .h1.and {
   font-family: Nicolettascript;
@@ -252,6 +257,11 @@ main {
     font-size: 150px;
     top: 27%;
     left: 45%;
+  }
+}
+@media (max-width: 280px) {
+  .h1.and {
+    font-size: 120px;
   }
 }
 
@@ -482,7 +492,7 @@ h3 {
 
 .time-block::before {
   content: "";
-  background: url("/img/sloy_15_167.png") no-repeat;
+  background: url("../img/sloy_15_167.png") no-repeat;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -575,6 +585,9 @@ h3 {
 .g-form__input-wrapper {
   text-align: left;
   margin: 0px 0px 30px 0px;
+}
+.g-form__input-wrapper_hidden {
+  margin: 0px 0px 0px 0px;
 }
 .g-form__input {
   margin: 0px 20px 0px 0px;
