--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -196,16 +196,23 @@ main {
 
 .fon-top img {
    max-width: 100%;
+
    @media (max-width:$md3+px) {
       max-width: 350px;
-         }
-   @media (max-width:$md4+px) {
-max-width: 250px;
    }
-   
+
+   @media (max-width:$md4+px) {
+      max-width: 250px;
+   }
+
 }
 
 .fon__scroll {
+   -webkit-background-image: url('../img/fon_main.png');
+   -webkit-background-repeat: no-repeat;
+   -webkit-background-attachment: fixed;
+   -webkit-background-position: right 50%;
+   -webkit-background-size: 100%;
    background-image: url('../img/fon_main.png');
    background-repeat: no-repeat;
    background-attachment: fixed;
@@ -213,6 +220,11 @@ max-width: 250px;
    background-size: 100%;
 
    @media (max-width:$md3+px) {
+      -webkit-background-image: url('../img/fon_main.png');
+      -webkit-background-repeat: no-repeat;
+      -webkit-background-attachment: fixed;
+      -webkit-background-position: right 70%;
+      -webkit-background-size: 100%;
       background-image: url('../img/fon_main.png');
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -229,9 +241,8 @@ max-width: 250px;
    height: 100%;
    margin: 0 auto;
    text-align: center;
-   @media (max-width:$md3+px) {
-      
-   }
+
+   @media (max-width:$md3+px) {}
 }
 
 .h1 {
@@ -241,15 +252,18 @@ max-width: 250px;
    line-height: 1.2;
    font-weight: 400;
    color: #505653;
+
    @media (max-width:$md3+px) {
       font-size: 120px;
    }
-   @media (max-width:$md4+px)  {
+
+   @media (max-width:$md4+px) {
       font-size: 100px;
    }
+
    @media (max-width:280px) {
       font-size: 80px;
-   } 
+   }
 }
 
 .h1.and {
@@ -262,19 +276,22 @@ max-width: 250px;
    position: absolute;
    top: 20%;
    left: 45%;
+
    @media (max-width:$md3+px) {
       font-size: 250px;
       top: 30%;
       left: 45%;
    }
+
    @media (max-width:$md4+px) {
       font-size: 150px;
       top: 27%;
       left: 45%;
    }
+
    @media (max-width:280px) {
       font-size: 120px;
-   } 
+   }
 }
 
 .ilya {
@@ -282,24 +299,28 @@ max-width: 250px;
    right: 0;
    z-index: 2;
    top: 20%;
+
    @media (max-width:$md3+px) {
       right: 10%;
    }
+
    @media (max-width:$md3+px) {
       top: 12%;
       right: 5%;
    }
-   
+
 }
 
 .daria {
    position: absolute;
    left: 0;
    top: 65%;
-   z-index: 2;
+   z-index: 3;
+
    @media (max-width:$md3+px) {
       left: 10%;
    }
+
    @media (max-width:$md3+px) {
       top: 55%;
       left: 5%;
@@ -317,18 +338,22 @@ max-width: 250px;
 
 .t1 {
    margin: 270px 0px 58px 0px;
+
    @media (max-width:$md3+px) {
       margin: 170px 0px 38px 0px;
    }
+
    @media (max-width:$md4+px) {
       margin: 100px 0px 28px 0px;
    }
 
 }
+
 .rotate {
    transform: rotate(90deg);
-   
+
 }
+
 .arrow {
    width: 52px;
    height: 45px;
@@ -342,9 +367,11 @@ h2 {
    color: #4d3e2a;
    font-size: 64px;
    margin: 50px 0px 50px 0px;
+
    @media (max-width:$md4+px) {
       font-size: 54px;
    }
+
    @media (max-width:380px) {
       font-size: 44px;
    }
@@ -352,9 +379,11 @@ h2 {
 
 h2 span {
    font-size: 53.4px;
+
    @media (max-width:$md4+px) {
       font-size: 43px;
    }
+
    @media (max-width:380px) {
       font-size: 34px;
    }
@@ -385,16 +414,19 @@ h2 span {
    border-radius: 50%;
    padding: 5px;
 }
+
 a {
    cursor: pointer;
    display: block;
    transition: all 0.5s ease 0s;
    color: #424745;
    font-size: 30px;
+
    &:hover {
       background-color: #c6c1a8;
    }
 }
+
 .text {
    display: block;
    text-align: center;
@@ -402,65 +434,79 @@ a {
    font-family: $fontfamily;
    max-width: 670px;
    margin: 0 auto;
+
    @media (max-width:$md3+px) {
       font-size: 30px;
    }
+
    @media (max-width:$md4+px) {
       font-size: 26px;
    }
+
    @media (max-width:380px) {
       font-size: 24px;
    }
 }
+
 .location {
    cursor: pointer;
    display: inline-block;
-   box-shadow: 0px 8px 18px 0px rgba(0,0,0,0.33);
-  padding: 12px 30px 12px 30px;
+   box-shadow: 0px 8px 18px 0px rgba(0, 0, 0, 0.33);
+   padding: 12px 30px 12px 30px;
    border: 4px solid #c6c1a8;
    border-radius: 30px;
    transition: all 0.5s ease 0s;
    margin: 40px 0px 40px 0px;
-         //background-color: #c6c1a8;
-         &:hover {
-            background-color: #c6c1a8;
-         }
-         @media (max-width:$md4+px) {
-            //padding: 8px 25px 8px 25px;
-            margin: 30px 0px 30px 0px;
-            font-size: 30px;
-         }
+
+   //background-color: #c6c1a8;
+   &:hover {
+      background-color: #c6c1a8;
+   }
+
+   @media (max-width:$md4+px) {
+      //padding: 8px 25px 8px 25px;
+      margin: 30px 0px 30px 0px;
+      font-size: 30px;
+   }
 }
+
 a {
    @media (max-width:$md4+px) {
       font-size: 27px;
    }
 }
+
 h3 {
    font-size: 32px;
-color: #424745;
-text-transform: uppercase;
+   color: #424745;
+   text-transform: uppercase;
 }
+
 //==========================================================
 //отступы
-.wedding__counter, .wishes-block {
+.wedding__counter,
+.wishes-block {
    margin: 0px 0px 50px 0px;
 }
+
 .margin {
    margin: 0 auto 20px;
 }
+
 //==========================================================
 //тайминг
 .time-block {
    position: relative;
    margin: 0px 0px 50px 100px;
-    @media (max-width:$md4+px) {
+
+   @media (max-width:$md4+px) {
       margin: 0px 0px 50px 50px;
-    }
+   }
 }
+
 .time-block::before {
    content: '';
-   background: url('../img/sloy_15_167.png') no-repeat ;
+   background: url('../img/sloy_15_167.png') no-repeat;
    width: 100%;
    height: 100%;
 
@@ -469,19 +515,23 @@ text-transform: uppercase;
    top: 0;
 
 }
+
 .time-list {
    text-align: left;
    padding: 0px 0px 0px 50px;
 }
+
 .time-list .text {
    text-align: left;
 }
+
 .time {
    font-family: 'Ekaterina Velikaya Two';
    font-size: 42.7px;
-font-style: italic;
-color: #beb9a5;
+   font-style: italic;
+   color: #beb9a5;
 }
+
 .time-title:not(:last-child) {
    margin: 0px 0px 40px 0px;
 }
@@ -491,55 +541,67 @@ color: #beb9a5;
    margin: 0 auto;
    max-width: 540px;
    border: 5px solid #cbc5af;
-border-radius: 50px;
-padding: 40px 20px;
+   border-radius: 50px;
+   padding: 40px 20px;
 }
+
 .organizer .location {
    margin: 0px 0px 0px 0px;
 }
+
 .location.organizator {
-  
+
    padding: 20px 40px;
- 
+
 }
+
 .day {
    font-family: 'Ekaterina Velikaya Two';
    font-weight: 900;
    font-size: 40px;
 
 }
+
 .text-day {
    margin: 30px 0px 30px 0px;
 }
+
 //==========================================================
 //отправка формы
-.form {
-  
-}
+.form {}
+
 .g-form__input-wrapper .text {
    text-align: left;
 }
+
 .text-margin {
    margin: 0px 0px 15px 0px;
+
    @media (max-width:$md3+px) {
-font-size: 30px;
+      font-size: 30px;
    }
+
    @media (max-width:380px) {
       font-size: 24px;
    }
 }
+
 .form__input {
    margin: 0px 0px 10px 0px;
+
    @media (max-width:$md3+px) {
       font-size: 26px;
-            }
-            @media (max-width:380px) {
-               font-size: 24px;
-                     }
+   }
+
+   @media (max-width:380px) {
+      font-size: 24px;
+   }
 }
+
 .hidden {
    margin: 0px 0px 0px 0px;
 }
+
 .form {}
 
 .g-form {
@@ -558,7 +620,7 @@ font-size: 30px;
    &__input-wrapper {
       text-align: left;
       margin: 0px 0px 30px 0px;
-     
+
       &_hidden {
          margin: 0px 0px 0px 0px;
       }
@@ -566,7 +628,7 @@ font-size: 30px;
 
    &__input {
       margin: 0px 20px 0px 0px;
-     
+
       &_name {
          background-color: transparent;
          border-bottom: 1px solid #cbc5af;
@@ -581,30 +643,46 @@ font-size: 30px;
    &__button-wrapper {}
 
    &__button {
-     // text-transform: uppercase;
+      // text-transform: uppercase;
       font-size: 30px;
-margin: 0px 0px 100px 0px;
-@media (max-width:$md3+px) {
-   margin: 0px 0px 40px 0px;
-}
+      margin: 0px 0px 100px 0px;
+
+      @media (max-width:$md3+px) {
+         margin: 0px 0px 40px 0px;
+      }
    }
+
    @media (max-width:$md4+px) {
       margin: 0px 0px 10px 0px;
    }
 }
+
 .quote {
    padding: 0px 0px 50px 0px;
 }
+
 .quote h2 {
    @media (max-width:$md3+px) {
-font-size: 40px;
+      font-size: 40px;
    }
+
    @media (max-width:$md4+px) {
       font-size: 35px;
       line-height: 300%;
       margin: 0px 0px 50px 0px;
-         }
+   }
 }
+
+.g-form__title_respond {
+   position: absolute;
+   margin: 0 auto;
+   top: 50%;
+   padding: 50px 70px;
+   line-height: 200%;
+   border: 3px solid #4d3e2a;
+   border-radius: 30px;
+}
+
 //===================================================================================================================
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
