--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,11 @@ main {
 }
 
 .fon__scroll {
+  -webkit-background-image: url("../img/fon_main.png");
+  -webkit-background-repeat: no-repeat;
+  -webkit-background-attachment: fixed;
+  -webkit-background-position: right 50%;
+  -webkit-background-size: 100%;
   background-image: url("../img/fon_main.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -194,6 +199,11 @@ main {
 }
 @media (max-width: 767.98px) {
   .fon__scroll {
+    -webkit-background-image: url("../img/fon_main.png");
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-attachment: fixed;
+    -webkit-background-position: right 70%;
+    -webkit-background-size: 100%;
     background-image: url("../img/fon_main.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -287,7 +297,7 @@ main {
   position: absolute;
   left: 0;
   top: 65%;
-  z-index: 2;
+  z-index: 3;
 }
 @media (max-width: 767.98px) {
   .daria {
@@ -472,7 +482,8 @@ h3 {
   text-transform: uppercase;
 }
 
-.wedding__counter, .wishes-block {
+.wedding__counter,
+.wishes-block {
   margin: 0px 0px 50px 0px;
 }
 
@@ -630,4 +641,14 @@ h3 {
     line-height: 300%;
     margin: 0px 0px 50px 0px;
   }
+}
+
+.g-form__title_respond {
+  position: absolute;
+  margin: 0 auto;
+  top: 50%;
+  padding: 50px 70px;
+  line-height: 200%;
+  border: 3px solid #4d3e2a;
+  border-radius: 30px;
 }
