--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,22 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Cormorant&display=swap&subset=cyrillic-ext");
 @font-face {
   font-family: "Ekaterina Velikaya Two";
-  src: url("../ekaterinavelikayatwo.ttf");
-  src: local("☺"), url("../fonts/ekaterinavelikayatwo.woff") format("woff"), url("../fonts/ekaterinavelikayatwo.ttf") format("truetype"), url("../fonts/ekaterinavelikayatwo.svg") format("svg");
+  src: url("../fonts/ekaterinavelikayatwo.woff");
+  src: local("☺"), url("../fonts/ekaterinavelikayatwo.woff") format("woff"), url("../fonts/ekaterinavelikayatwo.woff2") format("woff2"), url("../fonts/ekaterinavelikayatwo.ttf") format("truetype"), url("../fonts/ekaterinavelikayatwo.svg") format("svg");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: Nicolettascript;
-  src: url("../Nicoletta-script.ttf");
-  src: local("☺"), url("../fonts/Nicoletta-script.woff") format("woff"), url("../fonts/Nicoletta-script.ttf") format("truetype"), url("../fonts/Nicoletta-script.svg") format("svg");
+  font-family: "Nicolettascript";
+  src: url("../fonts/Nicoletta-script.woff");
+  src: local("☺"), url("../fonts/Nicoletta-script.woff") format("woff"), url("../fonts/Nicoletta-script.woff2") format("woff2"), url("../fonts/Nicoletta-script.ttf") format("truetype"), url("../fonts/Nicoletta-script.svg") format("svg");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Cormorant-Regular";
+  src: url("../fonts/Cormorant-Regular.woff");
+  src: local("☺"), url("../fonts/Cormorant-Regular.woff") format("woff"), url("../fonts/Cormorant-Regular.woff2") format("woff2"), url("../fonts/Cormorant-Regular.ttf") format("truetype"), url("../fonts/Cormorant-Regular.svg") format("svg");
   font-weight: 400;
   font-style: normal;
 }
@@ -61,7 +67,7 @@ body {
   font-size: 100%;
   line-height: 1;
   font-size: 37px;
-  font-family: "Cormorant";
+  font-family: "Cormorant-Regular", serif;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -80,7 +86,7 @@ body.lock {
 input,
 button,
 textarea {
-  font-family: "Cormorant";
+  font-family: "Cormorant-Regular", serif;
 }
 
 input::-ms-clear {
@@ -185,33 +191,44 @@ main {
   }
 }
 
-.fon__scroll {
-  -webkit-background-image: url("../img/fon_main.png");
-  -webkit-background-repeat: no-repeat;
-  -webkit-background-attachment: fixed;
-  -webkit-background-position: right 50%;
-  -webkit-background-size: 100%;
-  background-image: url("../img/fon_main.png");
+body:before {
+  content: "";
+  background: url("../img/fon_main.png");
+  position: fixed;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: right 50%;
   background-size: 100%;
-}
-@media (max-width: 767.98px) {
-  .fon__scroll {
-    -webkit-background-image: url("../img/fon_main.png");
-    -webkit-background-repeat: no-repeat;
-    -webkit-background-attachment: fixed;
-    -webkit-background-position: right 70%;
-    -webkit-background-size: 100%;
-    background-image: url("../img/fon_main.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: right 70%;
-    background-size: 100%;
-  }
+  background-position: right 50%;
+  z-index: 3;
 }
 
+/*
+.fon__scroll {
+   -webkit-background-image: url('../img/fon_main.png');
+   -webkit-background-repeat: no-repeat;
+   -webkit-background-attachment: fixed;
+   -webkit-background-position: right 50%;
+   -webkit-background-size: 100%;
+   background-image: url('../img/fon_main.png');
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-position: right 50%;
+   background-size: 100%;
+
+   @media (max-width:$md3+px) {
+      -webkit-background-image: url('../img/fon_main.png');
+      -webkit-background-repeat: no-repeat;
+      -webkit-background-attachment: fixed;
+      -webkit-background-position: right 70%;
+      -webkit-background-size: 100%;
+      background-image: url('../img/fon_main.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: right 70%;
+      background-size: 100%;
+   }
+
+}
+*/
 .main-title {
   padding: 350px 30px 0px 30px;
   position: relative;
@@ -321,6 +338,7 @@ main {
 
 .t1 {
   margin: 270px 0px 58px 0px;
+  text-transform: uppercase;
 }
 @media (max-width: 767.98px) {
   .t1 {
@@ -427,7 +445,7 @@ a:hover {
   display: block;
   text-align: center;
   font-size: 37px;
-  font-family: "Cormorant";
+  font-family: "Cormorant-Regular", serif;
   max-width: 670px;
   margin: 0 auto;
 }
@@ -614,6 +632,8 @@ h3 {
 .g-form__button {
   font-size: 30px;
   margin: 0px 0px 100px 0px;
+  -webkit-background-color: transparent;
+  background-color: transparent;
 }
 @media (max-width: 767.98px) {
   .g-form__button {
@@ -644,11 +664,12 @@ h3 {
 }
 
 .g-form__title_respond {
-  position: absolute;
+  position: fixed;
   margin: 0 auto;
   top: 50%;
-  padding: 50px 70px;
+  padding: 20px 40px;
   line-height: 200%;
   border: 3px solid #4d3e2a;
   border-radius: 30px;
+  background: #fff;
 }
