--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -692,7 +692,7 @@ h3 {
       margin: 0px 0px 50px 0px;
    }
 }
-
+/*
 .g-form__title_respond.hidden {
    visibility: hidden;
 }
@@ -707,12 +707,5 @@ h3 {
    border-radius: 30px;
    background: #fff;
 
-}
+}*/
 
-//===================================================================================================================
-
-//</ОСНОВНОЙ БЛОК>====================================================================================================
-
-//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
-
-//</ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>===================================================================================================
